--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
+    <title>Naxa</title>
 </head>
 <body>
 
 <h1 align="center">Django Boiler Plate </h1>
+<h1 align="center">Congratulation Setup Successfully Completed!!!! </h1>
 <p align="center">Base project structure with some included package and function. To be used for all projects In Naxa
    for Backend</p>
 <h3>Package Included </h3>
