login added for django backend and notes in about section edited

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,5 +18,22 @@
     <li>Gunicorn for production server</li>
 </div>
 
+<h3>Api Documentation</h3>
+<div>
+    <li>Swagger used for Api Documentation</li>
+    <li>All api's Listed in Api Documentation Page</li>
+    <li>Check <b>/project/urls.py</b> file for settings used</li>
+    <li>Package used <b>drf-yasg==1.20.0</b></li>
+    <li>Check Api Documentation Page <a href="/api/docs/">Api</a></li>
+</div>
+
+<h3>Login and Logout integrated using django built in auth view</h3>
+<div>
+    <li>Check <b>/project/urls.py/</b> for the used views</li>
+    <li>Sample redirect Url in Local settings files <b>/project/local_settings_sample.py</b></li>
+    <li>Check <b>templates/registration/login.html</b> for login html file</li>
+    <li>Check Login url <a href="/login/">Login</a></li>
+</div>
+
 </body>
 </html>
