Api authentication added in template

--- a/templates/about.html
+++ b/templates/about.html
@@ -35,5 +35,12 @@
     <li>Check Login url <a href="/login/">Login</a></li>
 </div>
 
+<h3>API Authentication</h3>
+<div>
+    <li>In built DRF Token Authentication Used</li>
+    <li>Check <b>/project/urls.py/</b> for the used views</li>
+    <li>Authentication Class Defined in <b>/project/settings.py</b></li>
+    <li>Check "api-token" in <a href="/api/docs/">API</a></li>
+</div>
 </body>
 </html>
