userprofile added and ussignal created for auto userprofile creation after user created

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,8 +27,9 @@
     <li>Check Api Documentation Page <a href="/api/docs/">Api</a></li>
 </div>
 
-<h3>Login and Logout integrated using django built in auth view</h3>
+<h3>Login and Logout </h3>
 <div>
+    <li>Used django built-in auth view</li>
     <li>Check <b>/project/urls.py/</b> for the used views</li>
     <li>Sample redirect Url in Local settings files <b>/project/local_settings_sample.py</b></li>
     <li>Check <b>templates/registration/login.html</b> for login html file</li>
