Updated readme file , left env extension still

--- a/templates/about.html
+++ b/templates/about.html
@@ -42,6 +42,19 @@
     <li>Check <b>/project/urls.py/</b> for the used views</li>
     <li>Authentication Class Defined in <b>/project/settings.py</b></li>
     <li>Check "api-token" in <a href="/api/docs/">API</a></li>
+    
 </div>
+
+
+
+<h3>External sevices urls</h3>
+<div>
+    <a href=http://localhost:8600/geoserver>Geoserver</a>
+    <br>
+    <a href=http://localhost:5051>pgadmin</a>
+    
+</div>
+
+
 </body>
 </html>
