--- a/templates/about.html
+++ b/templates/about.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Naxa</title>
+    <title>Naxa | Boilerplate</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <div class="container">
 
 <h1 align="center">Django Boiler Plate </h1>
 <h1 align="center">Congratulation Setup Successfully Completed!!!! </h1>
 <p align="center">Base project structure with some included package and function. To be used for all projects In Naxa
    for Backend</p>
-<h3>Package Included </h3>
+<h3 class="text-bold">Package Included </h3>
 <div>
-    <li><b>(Django==3.1)</b>Django</li>
-    <li><b>(celery==5.0.1)</b>Celery</li>
-    <li><b>(redis==3.5.3)</b>Redis</li>
-    <li><b>(drf-yasg==1.20.0)</b>Swagger for Api Documentation</li>
-    <li><b>(django-debug-toolbar==3.1.1)</b>Debug ToolBar</li>
-    <li><b>(coreschema==0.0.4)</b> Cors-header for cors control</li>
-    <li><b>(django-filter==2.4.0)</b>Django Filters</li>
-    <li><b>(gunicorn==20.0.4)</b>Gunicorn for production server</li>
+    <table class="table table-striped">
+        <thead>
+            <th>
+                Package Name
+            </th>
+            <th>
+                Package Key
+            </th>
+            <th>
+                Package Version
+            </th>
+        </thead>
+        <tbody>
+            {% for package in packages %}
+            <tr>
+                <td>
+                    <b>{{ package.project_name }}</b>
+                </td>
+                <td>
+                    {{ package.key }}
+                </td>
+                <td>
+                    {{ package.version }}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
 </div>
 
+<br>
 <h3>Api Documentation</h3>
 <div>
     <li>Swagger used for Api Documentation</li>
@@ -30,6 +56,7 @@
     <li>Check Api Documentation Page <a href="/api/docs/">Api</a></li>
 </div>
 
+<br>
 <h3>Login and Logout </h3>
 <div>
     <li>Used django built-in auth view</li>
@@ -39,25 +66,23 @@
     <li>Check Login url <a href="/login/">Login</a></li>
 </div>
 
+<br>
 <h3>API Authentication</h3>
 <div>
     <li>In built DRF Token Authentication Used</li>
     <li>Check <b>/project/urls.py/</b> for the used views</li>
     <li>Authentication Class Defined in <b>/project/settings.py</b></li>
     <li>Check "api-token" in <a href="/api/docs/">API</a></li>
-
 </div>
 
 
-
+<br>
 <h3>External sevices urls if used</h3>
 <div>
     <li>Geoserver used for spatial data managemnt <a href=http://localhost:8600/geoserver>Geoserver</a></li>
     <li>Postgres gui admin dashboard <a href=http://localhost:5051>pgadmin</a></li>
-
-
 </div>
 
-
+</div>
 </body>
 </html>
