feat: prod and local Dockerfiles

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container mt-5">
 
         <h1 align="center">Django Boiler Plate </h1>
         <h1 align="center">Congratulation Setup Successfully Completed!!!! </h1>
         <p align="center">Base project structure with some included package and function. To be used for all projects In Naxa
         for Backend</p>
-        <h3 class="text-bold">Package Included </h3>
+        <h3 class="text-bold mt-5">Package Included </h3>
         <div>
             <table class="table table-striped">
                 <thead>
