feat: add healthcheck.sh

--- a/templates/about.html
+++ b/templates/about.html
@@ -85,14 +85,16 @@
 
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
+                <span class="text-muted">
+                    Backend Boilerplate © <script>let d = new Date(); document.write(d.getUTCFullYear())</script>
+                </span>
                 
-                <a href="https://naxa.com.np" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    NAXA
-                </a>
             </div>
             
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex tex-dark">
-                Backend Boilerplate
+                <a href="https://naxa.com.np" target="_blank" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                    NAXA
+                </a>
             </ul>
         </footer>
     </div>
